<resources>
    <string name="code">GHy45SD1GrF11</string>
    <string name="default_notification_channel_id" translatable="false">Vexgift</string>
    <string name="net_error_title">Network Error</string>
    <string name="validate_empty_field">This field cannot be empty</string>
    <string name="validate_merchant_code_not_valid">Merchant Code is not valid\nThis merchant code will be entered by cashier</string>
    <string name="validate_merchant_code_empty">Merchant Code cannot be empty\nThis merchant code will be entered by cashier</string>
    <string name="validate_all">All field must be filled</string>
    <string name="validate_checkbox_aggree_title">Sorry</string>
    <string name="validate_checkbox_aggree_content">You need to check terms and agreement first</string>
    <string name="succsess">Success</string>
    <string name="dsv_ex_msg_dont_set_lm" translatable="false">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler" translatable="false">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="facebook_app_id" translatable="false">2076704542595981</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2076704542595981</string>
    <string name="app_title" translatable="false">Vexgift</string>
    <string name="app_copyright" translatable="false">Copyright © 2018</string>
    <string name="walkthrough_first">Get The Best</string>
    <string name="walkthrough_second">Get Free Token</string>
    <string name="walkthrough_third" translatable="false">To De Mun</string>
    <string name="walkthrough_fourth">Sign Up Now</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="common_exit_msg">If you click once again, the app will be closed</string>
    <string name="image_content_description">Image</string>
    <string name="notif_expired">[%s] was expired</string>
    <string name="notif_success_claim">Congrats! You got [%s] , Use this voucher before <b>%s</b></string>
    <string name="notif_expire_soon">[%s] will expire soon! Use this voucher before <b>%s</b></string>
    <string name="notif_is_available">[%s] is available now! Go and claim yours!</string>
    <string name="notif_item_time_now">Just now</string>
    <string name="notif_item_time_min">%dmin ago</string>
    <string name="notif_item_time_hour">%dhr ago</string>
    <string name="notif_item_time_day">%dd ago</string>
    <string name="notif_item_time_week">%dw ago</string>
    <string name="notif_item_time_month">%dm ago</string>
    <string name="notif_item_time_year">%dyr ago</string>
    <string name="days">%d Day(s)</string>
    <string name="coupon_exp_date_title">Expiration Date:</string>
    <string name="coupon_fragment_active">Active</string>
    <string name="coupon_fragment_expired">Expired</string>
    <string name="home_hot_coupon_title">Most Popular</string>
    <string name="home_brand_coupon_title">Merchant Brands</string>
    <string name="see_more_title">Show All</string>
    <string name="coupon_redeem_availability">Voucher will Expired in :</string>
    <string name="coupon_redeemed">Voucher has been redeemed in :</string>
    <string name="coupon_gifted">Voucher has been gifted in :</string>
    <string name="coupon_expired">Voucher has been expired in :</string>
    <string name="coupon_detail_availability">Voucher Availability</string>
    <string name="coupon_detail_desc_title">Voucher Description</string>
    <string name="voucher_detail_desc_title">Voucher Description</string>
    <string name="token_detail_desc_title">Token Description</string>
    <string name="coupon_detail_desc">In this digital generation where information can be easily obtained within seconds, business cards still have retained their importance in the achievement of increased business exposure and business sales. If your business already has a bunch of printed cards distributed to a number of potential customers and yet you do not see any improvement in your market reach, then it’s high time to revamp your old business card. </string>
    <string name="coupon_detail_terms_title">Terms &amp; Conditions</string>
    <string name="coupon_detail_terms">In this digital generation where information can be easily obtained within seconds, business cards still have retained their importance in the achievement of increased business exposure and business sales. If your business already has a bunch of printed cards distributed to a number of potential customers and yet you do not see any improvement in your market reach, then it’s high time to revamp your old business card. </string>
    <string name="coupon_detail_claim_voucher">Get Voucher</string>
    <string name="coupon_detail_claim_token">Get Token</string>
    <string name="coupon_detail_get_with_vp">Get with Vex Point</string>
    <string name="coupon_redeem_token">Redeem Token</string>
    <string name="coupon_redeem_voucher">Redeem Voucher</string>
    <string name="coupon_send_voucher">Send Voucher as a Gift</string>
    <string name="coupon_archive">Mark Voucher as Used</string>
    <string name="coupon_archive_dialog">You will mark this voucher as used. Please make sure you have copy voucher code. This action cannot be undone</string>
    <string name="coupon_redeem_notification_title">Get Voucher</string>
    <string name="coupon_redeem_notification_positive">Redeem</string>
    <string name="coupon_redeem_notification_negative">Cancel</string>
    <string name="coupon_redeem_notification_content">You will redeem this voucher.</string>
    <string name="coupon_redeem_deactivated_title">Confirmation</string>
    <string name="coupon_redeem_deactivated_positive">Deactivated</string>
    <string name="coupon_redeem_deactivated_negative">Cancel</string>
    <string name="coupon_redeem_deactivated_content">You will deactive this voucher. Please make sure you have copy voucher code. This action cannot be undone</string>
    <string name="voucher_timestamp_remarks">Available until </string>
    <string name="coupon_deactivated_voucher">Use Voucher</string>
    <string name="voucher_availability">%d out of %d</string>
    <string name="voucher_minimum_lp">Loyalty Point Required : %d</string>
    <string name="voucher_soldout_dialog_title">Oops</string>
    <string name="voucher_soldout_dialog_desc">This voucher is Soldout</string>
    <string name="coupon_redeem_voucher_code">Voucher Code</string>
    <string name="coupon_redeem_voucher_code_field">Merchant code</string>
    <string name="coupon_redeem_voucher_code_warning">The code will be entered by cashier</string>
    <string name="token_address_field">Input your Asset Address</string>
    <string name="token_address_field_hint">Asset Address</string>
    <string name="goods_address_field">Input your Shipping Address</string>
    <string name="goods_address_field_hint">Your Shipping Address, item type, item size</string>
    <string name="merchant_info_title">Voucher Usage Guidance</string>
    <string name="merchant_info_desc">To use this voucher, copy or scan the code to your system.\nIf there is any problem or suspicious activity please inform us at \n\nVexGift Support\nphone : 0812345678\nemail : support@vexgift.com</string>
    <string name="voucher_online_info_title">Voucher Usage Guidance</string>
    <string name="voucher_online_button">Use Voucher</string>
    <string name="voucher_online_info_desc">To use this voucher, copy the code and use it in %s.\nIf there is any problem or suspicious activity please inform us at \n\nVexGift Support\nphone : 0812345678\nemail : support@vexgift.com</string>
    <string name="voucher_3rd_party_info_desc">To use this voucher click claim button and give the code to the merchant\nIf there is any problem or suspicious activity please inform us at \n\nVexGift Support\nphone : 0812345678\nemail : support@vexgift.com</string>
    <string name="login_email">Email</string>
    <string name="login_phone">Phone Number</string>
    <string name="login_password">Password</string>
    <string name="login_password_forgot"><u>Forgot password?</u></string>
    <string name="login_button_login">Login</string>
    <string name="login_dont_have_account">Don\'t have an account?</string>
    <string name="login_sign_up_here"><u>Sign up here</u></string>
    <string name="login_button_fb_login">Continue with Facebook</string>
    <string name="login_button_google_login">Login with Google</string>
    <string name="login_button_or">or Login with</string>
    <string name="login_with_email">Login with Email</string>
    <string name="login_with_phone_number">Login with Phone Number</string>
    <string name="login_welcome_back">Welcome Back !</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="error_email_invalid">This is not valid email</string>
    <string name="error_phone_invalid">This is not valid phone number</string>
    <string name="register_username">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_repassword">Re enter password</string>
    <string name="register_repassword_not_match">Password doesn\'t matches</string>
    <string name="register_referral_code">Referral Code (Optional)</string>
    <string name="register_phone">Phone Number</string>
    <string name="register_button_register">Register</string>
    <string name="register_already_have_account">Already have an account?</string>
    <string name="register_login_here"><u>Login here</u></string>
    <string name="register_button_fb_login">Sign Up with Facebook</string>
    <string name="register_button_google_login">Sign Up with Google</string>
    <string name="register_button_or">or Sign Up with</string>
    <string name="register_with_email">Register with Email</string>
    <string name="register_with_phone_number">Register with Phone Number</string>
    <string name="register_almost_there">Almost There !</string>
    <string name="register_excited_to_see_you">We Are Excited to see you here</string>
    <string name="register_confirmation_text">Thanks for signing up!\nWe\'ve sent you a confirmation code to %s</string>
    <string name="register_confirmation_hint">Input confirmation code</string>
    <string name="register_confirmation_button">Confirm Email</string>
    <string name="register_confirmation_sms_button">Confirm SMS</string>
    <string name="register_confirmation_resend">Resend Email</string>
    <string name="register_confirmation_resend_sms">Resend SMS</string>
    <string name="register_confirmation_resend_time">Resend Email %s</string>
    <string name="register_confirmation_resend_sms_time">Resend Email %s</string>
    <string name="vexpoint_need_address_title">We Are Sorry</string>
    <string name="vexpoint_need_address_subtitle">Vex Address is Required</string>
    <string name="vexpoint_need_address_desc">You need to submit Vex Address to access Vex Point feature</string>
    <string name="vexpoint_need_address_button">Submit Now</string>
    <string name="home_explore_voucher">GIFT VOUCHER</string>
    <string name="home_explore_voucher_desc">Various of \nGift Voucher</string>
    <string name="home_explore_token">TOKEN AIRDROP</string>
    <string name="home_explore_token_desc">Various of \nToken Airdrop</string>
    <string name="home_explore_get_button">Get Now</string>
    <string name="push_notification_title">Push Notification</string>
    <string name="push_new_coupon">New Coupon</string>
    <string name="push_expire_soon">Expire Soon</string>
    <string name="push_most_popular">Most Popular</string>
    <string name="push_sound">Sound</string>
    <string name="push_vibrate">Vibrate</string>
</resources>