<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".module.login.ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="141dp">

        <ImageView
            android:layout_width="136dp"
            android:layout_height="33dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/logo_medium" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_submain"
        android:layout_marginLeft="@dimen/interval_medium"
        android:layout_marginRight="@dimen/interval_medium"
        android:background="@drawable/shape_field_input">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/register_username"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_submain"
        android:layout_marginLeft="@dimen/interval_medium"
        android:layout_marginRight="@dimen/interval_medium"
        android:background="@drawable/shape_field_input">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_submain"
        android:layout_marginLeft="@dimen/interval_medium"
        android:layout_marginRight="@dimen/interval_medium"
        android:background="@drawable/shape_field_input">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/register_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_submain"
        android:layout_marginLeft="@dimen/interval_medium"
        android:layout_marginRight="@dimen/interval_medium"
        android:background="@drawable/shape_field_input">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:hint="@string/register_repassword"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_content"
        android:layout_marginLeft="@dimen/interval_medium"
        android:layout_marginRight="@dimen/interval_medium"
        android:background="@drawable/shape_white_border_button"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_login"
            android:textColor="@color/material_white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_submain"
        android:layout_marginEnd="@dimen/interval_medium"
        android:layout_marginRight="@dimen/interval_medium"
        android:text="@string/login_password_forgot"
        android:textAlignment="textEnd"
        android:textColor="@color/material_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_submain"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_dont_have_account"
            android:textColor="@color/material_white"
            android:textSize="@dimen/text_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/interval_small"
            android:layout_marginStart="@dimen/interval_small"
            android:text="@string/login_sign_up_here"
            android:textColor="@color/material_white"
            android:textSize="@dimen/text_small" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_submain"
        android:text="@string/register_button_or"
        android:textAlignment="center"
        android:textColor="@color/material_white"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="@dimen/interval_medium"
        android:paddingLeft="@dimen/interval_medium"
        android:paddingTop="@dimen/interval_small"
        android:paddingBottom="@dimen/interval_small"
        android:paddingRight="@dimen/interval_medium"
        android:paddingStart="@dimen/interval_medium">

        <ImageView
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:layout_marginRight="@dimen/interval_content"
            android:src="@drawable/ic_fb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_fb_login"
            android:textColor="@color/material_white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="@dimen/interval_medium"
        android:paddingLeft="@dimen/interval_medium"
        android:paddingTop="@dimen/interval_small"
        android:paddingBottom="@dimen/interval_small"
        android:paddingRight="@dimen/interval_medium"
        android:paddingStart="@dimen/interval_medium">

        <ImageView
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:layout_marginRight="@dimen/interval_content"
            android:src="@drawable/ic_gg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_google_login"
            android:textColor="@color/material_white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>


</LinearLayout>