<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.setting.ui.SettingActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStart="0dp"
                android:padding="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp">

                <include layout="@layout/content_toolbar_back" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar"
            android:background="@color/material_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/push_notification_title"
                    android:textSize="@dimen/text_title"
                    android:textColor="@color/material_black"
                    android:tag="hnMed"
                    android:paddingLeft="@dimen/more_padding_horizontal"
                    android:paddingRight="@dimen/more_padding_horizontal"
                    android:layout_marginBottom="15dp"/>

                <Switch
                    android:id="@+id/sw_new_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.VexSwitch"
                    android:text="@string/push_new_coupon" />

                <Switch
                    android:id="@+id/sw_expire_soon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.VexSwitch"
                    android:text="@string/push_expire_soon" />

                <Switch
                    android:id="@+id/sw_most_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.VexSwitch"
                    android:text="@string/push_most_popular" />

                <Switch
                    android:id="@+id/sw_sound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.VexSwitch"
                    android:text="@string/push_sound" />

                <Switch
                    android:id="@+id/sw_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.VexSwitch"
                    android:text="@string/push_vibrate" />

            </LinearLayout>
        </ScrollView>

</RelativeLayout>