<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/app_bar"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_main"
        android:layout_marginTop="@dimen/interval_main"
        android:tag="hnMed"
        android:text="@string/vexpoint_need_address_title"
        android:textColor="@color/material_black_text_color"
        android:textSize="@dimen/text_big_medium" />

    <ImageView
        android:layout_width="181dp"
        android:layout_height="150dp"
        android:src="@drawable/kyc_illustration" />

    <TextView
        android:id="@+id/tv_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_small"
        android:layout_marginTop="@dimen/interval_main"
        android:tag="hnMed"
        android:text="@string/vexpoint_need_address_subtitle"
        android:textColor="@color/material_black_text_color"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/tv_info_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_main"
        android:paddingEnd="@dimen/interval_big"
        android:paddingLeft="@dimen/interval_big"
        android:paddingRight="@dimen/interval_big"
        android:paddingStart="@dimen/interval_big"
        android:text="@string/vexpoint_need_address_desc"
        android:textAlignment="center"
        android:textColor="@color/material_black_sub_text_color"
        android:textSize="@dimen/text_small" />

    <LinearLayout
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/interval_main"
        android:layout_marginTop="@dimen/interval_small"
        android:background="@drawable/shape_ripple_small_button"
        android:gravity="center"
        android:paddingBottom="@dimen/interval_submain"
        android:paddingLeft="@dimen/interval_big"
        android:paddingRight="@dimen/interval_big"
        android:paddingTop="@dimen/interval_submain">

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="bold"
            android:text="@string/vexpoint_need_address_button"
            android:textAllCaps="true"
            android:textColor="@color/material_white"
            android:textSize="@dimen/text_xtiny" />
    </LinearLayout>
</LinearLayout>