<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_coupon"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/interval_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/voucher_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/voucher_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/interval_submain">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="1.57"
                android:tag="hnBoldCond"
                android:text="@string/home_explore_voucher"
                android:textColor="@color/material_white"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_explore_voucher_desc"
                android:textColor="@color/material_white"
                android:textSize="@dimen/text_tiny" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/interval_main"
                android:background="@drawable/shape_explore_get_button"
                android:tag="hmMed"
                android:text="@string/home_explore_get_button"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_xtiny">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/token_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/token_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/interval_submain">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="1.57"
                android:tag="hnBoldCond"
                android:text="@string/home_explore_token"
                android:textColor="@color/material_white"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_explore_token_desc"
                android:textColor="@color/material_white"
                android:textSize="@dimen/text_tiny" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/interval_main"
                android:background="@drawable/shape_explore_get_button"
                android:tag="hmMed"
                android:text="@string/home_explore_get_button"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_xtiny" />

        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/interval_main"
        android:background="@color/lineColor"></View>

</LinearLayout>