<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module.login.ui.LoginActivity">

    <ImageView
        android:id="@+id/v_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="141dp">

            <ImageView
                android:layout_width="136dp"
                android:layout_height="33dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/image_content_description"
                android:src="@drawable/logo_medium" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interval_submain"
            android:layout_marginLeft="@dimen/interval_medium"
            android:layout_marginRight="@dimen/interval_medium"
            android:background="@drawable/shape_field_register_confirmation">

            <TextView
                android:id="@+id/tv_confirmation_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/register_confirmation_text"
                android:textColor="@color/material_white"
                android:textSize="@dimen/text_small_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interval_submain"
            android:layout_marginLeft="@dimen/interval_medium"
            android:layout_marginRight="@dimen/interval_medium"
            android:background="@drawable/shape_field_input">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/register_confirmation_hint"
                android:inputType="textPassword"
                android:textColor="@color/material_white"
                android:textSize="@dimen/text_medium" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/resend_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interval_content"
            android:layout_marginLeft="@dimen/interval_medium"
            android:layout_marginRight="@dimen/interval_medium"
            android:background="@drawable/shape_white_border_button"
            android:gravity="center_horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/shape_ripple_transparent"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register_confirmation_resend"
                android:textColor="@color/material_white" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirmation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/interval_content"
            android:layout_marginLeft="@dimen/interval_medium"
            android:layout_marginRight="@dimen/interval_medium"
            android:background="@drawable/shape_white_border_button"
            android:gravity="center_horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/shape_ripple_transparent"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register_confirmation_button"
                android:textColor="@color/material_white" />
        </RelativeLayout>

    </LinearLayout>



</RelativeLayout>